# InjectorEngine

./: .gitignore  .gitmodules  .travis.yml_  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
CMake/: Defines.hpp.in  VulkanMemoryAllocator.cmake  asio.cmake  stb.cmake
Include/Injector/: AsyncConsole.hpp  Component.hpp  Compressor.hpp  CpuInfo.hpp  Engine.hpp  EngineException.hpp  Entity.hpp  Exception.hpp  GlfwDefines.hpp  Manager.hpp  System.hpp
Includes/Injector/: Entity.hpp
Resources/Models/: UtahTeapot.dae  UtahTeapot.fbx
Resources/Shaders/: ColColor.frag  ColColor.frag.spv  ColColor.vert  Color.frag.spv  Color.vert  ColorColor.frag.spv  ColorColor.vert.spv  Diffuse.frag  Diffuse.frag.spv  Diffuse.vert.spv  Gui.frag  Gui.vert  ImageDiffuse.frag  ImageDiffuse.frag.spv  ImageDiffuse.vert  ImageDiffuse.vert.spv  SimSky.frag  SimulatedSky.vert  Sky.frag  Sky.vert  TexDiffuse.frag  TexDiffuse.vert  TextureDiffuse.frag
Resourcess/Shaders/: Diffuse.vert.spv  TexDiffuse.vert
Source/: ByteSwap.cpp  Component.cpp  Compressor.cpp  CpuInfo.cpp  Editor.cpp  Engine.cpp  EngineException.cpp  Entity.cpp  Exception.cpp  Manager.cpp  System.cpp
Source/ECS/: EcsEntity.cpp  EcsManager.cpp  Entity.cpp  Manager.cpp
Source/Exception/: CastException.cpp  Exception.cpp  NotImplementedException.cpp  NullException.cpp  OutOfRangeException.cpp
Source/File/: FileException.cpp  FileStream.cpp
Source/Graphics/: AspectRatioEcsSystem.cpp  BasicModel.cpp  Buffer.cpp  CameraComponent.cpp  CameraEcsComponent.cpp  CameraEcsSystem.cpp  CameraSystem.cpp  ColorGpuPipeline.cpp  ColorPipeline.cpp  DiffuseGpuPipeline.cpp  DiffusePipeline.cpp  FlyTransformSystem.cpp  FreeCameraEcsSystem.cpp  FreeCameraSystem.cpp  GlBuffer.cpp  GlCameraSystem.cpp  GlColColorGpuPipeline.cpp  GlColorGpuPipeline.cpp  GlColorPipeline.cpp  GlDiffuseGpuPipeline.cpp  GlDiffusePipeline.cpp  GlGpuBuffer.cpp  GlGpuFramebuffer.cpp  GlGpuImage.cpp  GlGpuMesh.cpp  GlGpuPipeline.cpp  GlGpuShader.cpp  GlMesh.cpp  GlPipeline.cpp  GlRenderSystem.cpp  GlShader.cpp  GlTexDiffuseGpuPipeline.cpp  GlTexDiffusePipeline.cpp  GlTexture.cpp  GlVertexAttribute.cpp  GlWindow.cpp  GpuBuffer.cpp  GpuFramebuffer.cpp  GpuImage.cpp  GpuMesh.cpp  (+44 more)
Source/Mathematics/: Angle.cpp  AttachComponent.cpp  BoundingBox.cpp  BoundingBox2.cpp  BoundingBox3.cpp  BoundingSphere.cpp  BoundingSphere2.cpp  BoundingSphere3.cpp  Color.cpp  IntVector2.cpp  IntVector3.cpp  IntVector4.cpp  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  RotateComponent.cpp  RotateEcsComponent.cpp  SizeVector2.cpp  SizeVector3.cpp  SizeVector4.cpp  TransformComponent.cpp  TransformEcsComponent.cpp  TransformEcsSystem.cpp  TransformSystem.cpp  TranslateComponent.cpp  TranslateEcsComponent.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Source/Memory/: ByteSwap.cpp  MemoryStream.cpp
Source/Network/: ClientSocket.cpp  ClientSocketEcsSystem.cpp  ConsoleEcsSystem.cpp  ConsoleSystem.cpp  Datagram.cpp  Endpoint.cpp  NetContextSystem.cpp  Socket.cpp  SocketSession.cpp  SslTcpClient.cpp  SslTcpServer.cpp  SslTcpSession.cpp  TcpClient.cpp  TcpClientSystem.cpp  TcpServer.cpp  TcpServerSocket.cpp  TcpServerSystem.cpp  TcpSessionSocket.cpp  TcpSocket.cpp  UdpClientSystem.cpp  UdpServerSystem.cpp  UdpSocket.cpp
Source/Storage/: FileException.cpp  FileStream.cpp
Sources/: Engine.cpp
Sources/Graphics/: Buffer.cpp  GlColColorPipeline.cpp  GlMesh.cpp  GlRenderSystem.cpp  GlShader.cpp  GlTexDiffusePipeline.cpp  Image.cpp  RenderComponent.cpp  VkCameraSystem.cpp
Sources/Mathematics/: SizeVector3.cpp  SizeVector4.cpp
Sources/Network/: Datagram.cpp
cmake/: SDL_net.cmake  asio.cmake  config.hpp.in  defines.hpp.in  imgui.cmake  injector_engine_config.hpp.in  stb.cmake  vma.cmake
include/: engine.hpp  injector_engine.hpp  test_game.hpp  vulkan_window.hpp  window.hpp
include/inject/: aspect_ratio_event.hpp  async_console.hpp  binary_stream.hpp  camera_component.hpp  camera_system.hpp  compressor.hpp  datagram.hpp  engine.hpp  file_stream.hpp  first_person_system.hpp  free_camera_system.hpp  gl_attribute.hpp  gl_batch.hpp  gl_blend_color_material.hpp  gl_blend_diffuse_material.hpp  gl_buffer.hpp  gl_color_material.hpp  gl_diffuse_material.hpp  gl_draw_component.hpp  gl_draw_system.hpp  gl_editor_level.hpp  gl_editor_window.hpp  gl_gradient_sky_material.hpp  gl_gradient_sky_system.hpp  gl_gui_system.hpp  gl_material.hpp  gl_mesh.hpp  gl_primitive.hpp  gl_render_system.hpp  gl_shader.hpp  gl_sprite_color_material.hpp  gl_window.hpp  graphics_system.hpp  image.hpp  interface_system.hpp  keyboard_event.hpp  level.hpp  manager.hpp  memory_stream.hpp  mouse_button_event.hpp  (+16 more)
include/injector/: byte_swap.hpp  camera_component.hpp  camera_system.hpp  component.hpp  compressor.hpp  datagram.hpp  engine.hpp  entity.hpp  file_stream.hpp  free_camera_system.hpp  gl_batch.hpp  gl_buffer.hpp  gl_color_material.hpp  gl_material.hpp  gl_mesh.hpp  gl_primitives.hpp  gl_shader.hpp  gl_window.hpp  glm_defines.hpp  image.hpp  int_vector2.hpp  int_vector3.hpp  int_vector4.hpp  keyboard_event.hpp  manager.hpp  material.hpp  matrix2.hpp  matrix3.hpp  matrix4.hpp  mesh.hpp  net_context_system.hpp  persp_camera_component.hpp  quaternion.hpp  render_component.hpp  render_system.hpp  rotate_component.hpp  shader.hpp  system.hpp  transform_component.hpp  transform_system.hpp  (+9 more)
include/injector_engine/: engine.hpp  opengl.hpp  voxels.hpp  vulkan.hpp
resources/: LICENSE.md
source/: byte_swap.cpp  camera_component.cpp  camera_system.cpp  component.cpp  editor.cpp  engine.cpp  entity.cpp  file_stream.cpp  gl_batch.cpp  gl_buffer.cpp  gl_color_material.cpp  gl_material.cpp  gl_mesh.cpp  gl_primitives.cpp  gl_shader.cpp  gl_window.cpp  int_vector2.cpp  int_vector3.cpp  int_vector4.cpp  main.cpp  manager.cpp  material.cpp  matrix2.cpp  matrix3.cpp  matrix4.cpp  mesh.cpp  opengl_window.cpp  quaternion.cpp  render_component.cpp  render_system.cpp  rotate_component.cpp  shader.cpp  system.cpp  transform_component.cpp  transform_system.cpp  translate_component.cpp  vector2.cpp  vector3.cpp  vector4.cpp  vulkan.cpp  (+5 more)
(+689 files in other folders)
